--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
     .toolbar{display:flex;flex-wrap:wrap;gap:8px;margin-bottom:10px}
     .toolbar input[type=file]{display:none}
     .hint{color:#666;font-size:12px}
+    @media (max-width: 600px){
+  html, body { font-size: 16px; }
+  .btn, button, select, input[type="text"], textarea { min-height: 44px; font-size: 16px; }
+  .toolbar, .controls { flex-direction: column; align-items: stretch; }
+  .item { flex-direction: column; align-items: stretch; }
+  .item .title { white-space: normal; }
+  .item button, .item select { width: 100%; }
+}
   </style>
 </head>
 <body>
@@ -282,3 +290,4 @@
   </script>
 </body>
 </html>
+
