--- a/status.html
+++ b/status.html
@@ -20,6 +20,14 @@
     .item[data-status="継続"] .title{color:#2e7d32;font-weight:600}
     .item[data-status="達成"] .title{text-decoration:line-through;color:#777}
     .muted{color:#666;font-size:13px}
+    @media (max-width: 600px){
+  html, body { font-size: 16px; }
+  .btn, button, select, input[type="text"], textarea { min-height: 44px; font-size: 16px; }
+  .toolbar, .controls { flex-direction: column; align-items: stretch; }
+  .item { flex-direction: column; align-items: stretch; }
+  .item .title { white-space: normal; }
+  .item button, .item select { width: 100%; }
+}
   </style>
 </head>
 <body>
@@ -148,3 +156,4 @@
   </script>
 </body>
 </html>
+
