--- a/detail.html
+++ b/detail.html
@@ -12,6 +12,14 @@
     textarea{width:100%;min-height:200px;font-family:monospace}
     input,select,textarea{margin-top:8px;margin-bottom:16px;font-size:14px;padding:6px;width:100%}
     label{font-weight:600;display:block;margin-top:12px}
+    @media (max-width: 600px){
+  html, body { font-size: 16px; }
+  .btn, button, select, input[type="text"], textarea { min-height: 44px; font-size: 16px; }
+  .toolbar, .controls { flex-direction: column; align-items: stretch; }
+  .item { flex-direction: column; align-items: stretch; }
+  .item .title { white-space: normal; }
+  .item button, .item select { width: 100%; }
+}
   </style>
 </head>
 <body>
@@ -79,3 +87,4 @@
   </script>
 </body>
 </html>
+
